--- a/dev/src/main/resources/application.properties
+++ b/dev/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=dev
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/VitaSalus
+spring.datasource.username=postgres
+spring.datasource.password=Sant123456
+
+spring.jpa.properties..hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
