--- a/front-vitasalus/package.json
+++ b/front-vitasalus/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.1.5",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "mobx": "^6.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
